; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_ioctl.c_check_xflags.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_ioctl.c_check_xflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FS_XFLAG_APPEND = common dso_local global i32 0, align 4
@FS_XFLAG_IMMUTABLE = common dso_local global i32 0, align 4
@FS_XFLAG_NOATIME = common dso_local global i32 0, align 4
@FS_XFLAG_NODUMP = common dso_local global i32 0, align 4
@FS_XFLAG_SYNC = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @check_xflags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_xflags(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @FS_XFLAG_APPEND, align 4
  %6 = load i32, i32* @FS_XFLAG_IMMUTABLE, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @FS_XFLAG_NOATIME, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @FS_XFLAG_NODUMP, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @FS_XFLAG_SYNC, align 4
  %13 = or i32 %11, %12
  %14 = xor i32 %13, -1
  %15 = and i32 %4, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load i32, i32* @EOPNOTSUPP, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %21

20:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %17
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
